--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -9,3 +9,9 @@
 .text-align-center {
     text-align: center;
 }
+
+input:read-only {
+    border: 0;
+    box-shadow: none;
+    background-color: #ddd;
+}
