--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -9,3 +9,11 @@
 .text-align-center {
     text-align: center;
 }
+
+.border-black-1 {
+    border: 1px solid black;
+}
+
+.border-red-1 {
+    border: 1px solid red;
+}
