--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -10,6 +10,10 @@
     text-align: center;
 }
 
+.vertical-align-top {
+    vertical-align: top;
+}
+
 .border-black-1 {
     border: 1px solid black;
 }
