Add style for button

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -25,3 +25,10 @@
 .nowrap {
     white-space: nowrap;
 }
+
+.dropdown-as-button {
+    /* background: url(some data); */
+    /* width: 16px; */
+    appearance: none;
+    border: 0;
+}
