--- a/src/styles/magickButton.css
+++ b/src/styles/magickButton.css
@@ -6,6 +6,8 @@ IDLE (btn-two)
 
 .magick-button {
   position: relative;
+  cursor: pointer;
+  border: 0;
   color: black;
   background-color: rgba(0, 255, 255, 0.5);
   left: 50px;
@@ -23,6 +25,7 @@ IDLE (btn-two)
 
 .magick-button:hover {
   background-color: initial;
+  border: 1px dashed rgba(255, 0, 0, 0.25);
 }
 
 .magick-button::before,
