--- a/src/styles/magickButton.css
+++ b/src/styles/magickButton.css
@@ -9,7 +9,8 @@ IDLE (btn-two)
   cursor: pointer;
   border: 0;
   color: black;
-  background-color: rgba(0, 255, 255, 0.5);
+  /* background-color: rgba(0, 255, 255, 0.5); */
+  background-color: rgba(183, 229, 209, 0.75);
   left: 50px;
   width: 256px;
   /* width: 350px; */
