--- a/src/styles/magickButton.css
+++ b/src/styles/magickButton.css
@@ -11,8 +11,9 @@ IDLE (btn-two)
   color: black;
   /* background-color: rgba(0, 255, 255, 0.5); */
   background-color: rgba(183, 229, 209, 0.75);
-  left: 50px;
-  width: 256px;
+  /* left: 50px; */
+  width: 170px;
+  /* width: 256px; */
   /* width: 350px; */
   height: 64px;
   line-height: 64px;
@@ -72,7 +73,8 @@ IDLE (btn-two)
 
 .magick-button-two:hover::after,
 .magick-button-two:hover::before {
-  left: 96px;
+  left: 53px;
+  /* left: 96px; */
   /* left: 143px; */
   width: 64px;
 
